# test_case_fastAPI

./: README.md  pyproject.toml
alembic/versions/: 2023_10_30_2314-b7d6ce81c36f_create_tables.py  2023_10_30_2322-9c0a815ac01d_edit_plan_and_fact_types.py
app/: main_router.py  start_api.py
app/misc/: misc.py
database/: connector.py  functions.py  models.py
schemes/: schemes.py
scripts/: xlsx_parser.py
xlsx_files/: example.xlsx_1698698360.xlsx
